support for bash scripts and hetzner example

--- a/examples/vm-init/hosts.yml
+++ b/examples/vm-init/hosts.yml
@@ -1,8 +1,9 @@
 scrolls:
-  - init-setup 
+  - init-setup
+  - install-devtools 
 
 pubkey_path: "~/.ssh/id_ed25519"
 
 hosts:
-  - host: "128.140.89.108"
+  - host: ""
     user: "root"
