pubkey file instead of agent

--- a/examples/vm-init/hosts.yml
+++ b/examples/vm-init/hosts.yml
@@ -4,4 +4,6 @@ scrolls:
 
 hosts:
   - host: "116.202.26.176"
+    pubkey_path: "/home/lukasmetzner/.ssh/id_ed25519.pub"
+    privkey_path: "/home/lukasmetzner/.ssh/id_ed25519"
     user: "root"
